<resources>
    <string name="app_name">Inventory</string>
    <string name="NomeDoProjeto">Nome do Projeto</string>
    <string name="artisans">Artesãos</string>
    <string name="products">Produtos</string>
    <string name="addNewArtisan">Adicionar Novo Artesão</string>
    <string name="addNewClient">Adicionar Novo Cliente</string>
    <string name="pix">Pix</string>
    <string name="cpf">CPF</string>
    <string name="cnpjOrCpf">CNPJ ou CPF</string>
    <string name="skill">Habilidades</string>
    <string name="phone">Telefone</string>
    <string name="email">E-mail</string>
    <string name="address">Endereço</string>
    <string name="crochet">Crochê</string>
    <string name="sewing">Costura</string>
    <string name="macrame">Macramê</string>
    <string name="tecelagem">Tecelagem</string>
    <string name="sergioMatos">Sérgio Matos</string>
    <string name="amigurumi">Amigurumi</string>
    <string name="register">Registrar</string>
    <string name="cancel">Cancelar</string>
    <string name="hintName">Digite o nome...</string>
    <string name="hintDocument">Digite o documento...</string>
    <string name="hintAddress">Digite o endereço...</string>
    <string name="hintPhone">Digite o número de contato...</string>
    <string name="hintArtisanPix">Digite o PIX...</string>
    <string name="hintEmail">Digite o e-mail...</string>
    <string name="hintSearchArtisan">Buscar artesão...</string>
    <string name="name">Nome</string>
    <string name="businessName">Nome do Cliente</string>
    <string name="contactPersonName">Nome do Representante</string>
    <string name="singlepix">Pix:</string>
    <string name="singleSkills">Habilidades:</string>
    <string name="btnContact">Contato</string>
    <string name="btnDelete">Excluir</string>
    <string name="btnEdit">Editar</string>
    <string name="production">Produção</string>
    <string name="addsucess">Adicionado com sucesso.</string>
    <string name="fillAll">Por favor, preencha todos os itens</string>
    <string name="appNotFound">Aplicativo não encontrado.</string>
    <string name="deleteArtisan">Excluir Artesão</string>
    <string name="areYouSure">Tem certeza que deseja excluir?</string>
    <string name="deleted">Artesão Excluído.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_home">Registrar Produção</string>
    <string name="title_artisan">Artesãos</string>
    <string name="title_clients">Clientes</string>
    <string name="title_products">Produtos</string>
</resources>