<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_new_production">

    <fragment
        android:id="@+id/navigation_artisan"
        android:name="com.miigubymia.inventory.artisans.ArtisanFragment"
        android:label="@string/title_artisan"
        tools:layout="@layout/fragment_artisans_list" />

    <fragment
        android:id="@+id/navigation_products"
        android:name="com.miigubymia.inventory.products.ProductsFragment"
        android:label="@string/title_products"
        tools:layout="@layout/fragment_product_list" />

    <fragment
        android:id="@+id/navigation_clients"
        android:name="com.miigubymia.inventory.clients.ClientsFragment"
        android:label="@string/title_clients"
        tools:layout="@layout/fragment_client_list" />

    <fragment
        android:id="@+id/nav_new_production"
        android:name="com.miigubymia.inventory.production.AddNewProductionFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_add_new_production" >
        <action
            android:id="@+id/action_nav_new_production_to_productionListFragment"
            app:destination="@id/productionListFragment" />
    </fragment>
    <fragment
        android:id="@+id/productionListFragment"
        android:name="com.miigubymia.inventory.production.ProductionListFragment"
        android:label="fragment_production_list"
        tools:layout="@layout/fragment_production_list" />
</navigation>