<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cbCostura"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_round"
    tools:context=".artisans.AddArtisanFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tvArtisanAddTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/addNewArtisan"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Nome"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:startIconTint="@color/teal_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddArtisanName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hintArtisanName"
                    android:inputType="textPersonName"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorLink="@color/black"
                    app:hintTextColor="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="WhattsApp"
                app:expandedHintEnabled="false"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/ic_baseline_phone_android_24"
                app:startIconTint="@color/teal_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etAddArtisanPhone"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/bg_round"
                    android:backgroundTint="#FFFFFF"
                    android:hint="@string/hintArtisanPhone"
                    android:inputType="phone"
                    android:textColor="@color/black"
                    android:textColorHighlight="@color/black"
                    android:textColorHint="@color/black"
                    android:textColorLink="@color/black" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round"
                android:backgroundTint="#FFFFFF"
                android:padding="14dp">

                <TextView
                    android:id="@+id/tvTitlePix"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pix"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <RadioGroup
                    android:id="@+id/radioGroupPix"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitlePix">

                    <RadioButton
                        android:id="@+id/rbtnPhone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/phone"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/rbtnCPF"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/cpf"
                        android:textColor="@color/black" />

                    <RadioButton
                        android:id="@+id/rbtnEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:text="@string/email"
                        android:textColor="@color/black" />

                </RadioGroup>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    app:hintTextColor="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroupPix"
                    app:startIconDrawable="@drawable/ic_baseline_attach_money_24"
                    app:startIconTint="@color/teal_700"
                    tools:layout_editor_absoluteX="10dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/etAddArtisanPix"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:backgroundTint="@android:color/transparent"
                        android:hint="@string/hintArtisanPix"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        android:textColorHint="@color/black"
                        android:textColorLink="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_round"
                android:backgroundTint="#FFFFFF"
                android:padding="14dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvTitleSkills"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/skill"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="18sp" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/cbCroche"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/crochet"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cbAmigurumi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/amigurumi"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cbMacrame"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/macrame"
                        android:textColor="@color/black" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <CheckBox
                        android:id="@+id/cbTecelagem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tecelagem"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cbSergio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sergioMatos"
                        android:textColor="@color/black" />

                    <CheckBox
                        android:id="@+id/cbSew"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sewing"
                        android:textColor="@color/black" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancelAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:backgroundTint="#ACE1E0"
                    android:text="@string/cancel"
                    android:textColor="@color/teal_700"
                    android:textSize="14sp"
                    app:cornerRadius="20dp" />

                <Button
                    android:id="@+id/btnregisterNewArtisan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="3"
                    android:backgroundTint="#F44336"
                    android:text="@string/register"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:cornerRadius="20dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>